--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -4,12 +4,15 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
+    <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :genres %>
-    <%= f.association :user %>
+    <%#= f.collection_select(:band, :ids, User.all, :id, :username, {}, { :multiple => true } )%>
+    <%= f.input :user_ids, collection: User.where.not(id: current_user.id), as: :check_boxes, label_method: :username, value_mehod: :id, label: "Members", include_blank: false %>
+
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, :class => "btn btn-primary" %>
   </div>
 <% end %>
