--- a/app/views/bands/edit.html.erb
+++ b/app/views/bands/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Band</h1>
 
-<%= render 'form', band: @band %>
+<%= render 'edit_form', band: @band %>
 
 <%= link_to 'Show', @band %> |
 <%= link_to 'Back', bands_path %>
