--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,31 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Bands</h1>
+  <h1>Bands</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Genres</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <%= link_to 'New Band', new_band_path %>
 
-  <tbody>
-    <% @bands.each do |band| %>
-      <tr>
-        <td><%= band.description %></td>
-        <td><%= band.genres %></td>
-        <td><%= band.user %></td>
-        <td><%= link_to 'Show', band %></td>
-        <td><%= link_to 'Edit', edit_band_path(band) %></td>
-        <td><%= link_to 'Destroy', band, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Band', new_band_path %>
+  <% @bands.each do |band| %>
+    <div class="card" style="width: 40rem">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <h5 class="card-title"><%= band.name %></h5>
+            <small class="text-muted"><strong>Genres: </strong><%= band.genres %></small>
+            <p><%= band.description %></p>
+            <br>
+          </div>
+          <div class="col">
+            <h6>Members:</h6>
+            <table class="table">
+              <% band.users.each do |member| %>
+                <tr>
+                  <td><%= member.full_name %></td>
+                  <td><%= link_to 'View Profile', member %></td>
+                </tr>
+              <% end %>
+            </table>
+            <% if current_user and current_user.bands.include?(band) %>
+              <div class="card-footer">
+                <%= link_to 'Edit', edit_band_path(band) %> | 
+                <%= link_to 'Destroy', band, method: :delete, data: { confirm: 'Are you sure?' } %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
