--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,19 +1,19 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+	<br>
+	<p>
+	  <strong>Name:</strong>
+	  <%= @band.name %>
+	</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @band.description %>
-</p>
+	<p>
+	  <strong>Description:</strong>
+	  <%= @band.description %>
+	</p>
 
-<p>
-  <strong>Genres:</strong>
-  <%= @band.genres %>
-</p>
+	<p>
+	  <strong>Genres:</strong>
+	  <%= @band.genres %>
+	</p>
 
-<p>
-  <strong>User:</strong>
-  <%= @band.user %>
-</p>
-
-<%= link_to 'Edit', edit_band_path(@band) %> |
-<%= link_to 'Back', bands_path %>
+	<%= link_to 'Ok', bands_path %>
+</div>
