--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for([@demo, @demo.comments.build]) do |f| %>
 	<%= f.input :comment_text %>
-	<%= f.button :submit %>
+	<%= f.button :submit, :class => "btn btn-primary" %>
 <% end %>
