--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,39 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="navbar-brand">LyrixChange</div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <% if current_user %>
+              <li class="nav-item">
+                <a class="nav-link" href="/">Demos</span></a>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="/bands">Bands</a></li>
+              <li class="nav-item"><a class="nav-link" href="/users">User</a></li>
+              <span class="navbar-text mr-sm-2">
+                 | Logged in as <%= current_user.username %>.
+                <%= link_to "My Profile", current_user %> | 
+                <%= link_to "Log Out", logout_path %>
+              </span>
+            <% else %>
+              <span class="navbar-text mr-sm-2">
+                 | <%= link_to "Sign Up", signup_path %> or 
+                <%= link_to "Log In", login_path %>
+              </span>
+            <% end %>
+          </span>
+        </ul>
+      </div>
+    </nav>
+    <br>
+    <div class="container">
+      <p id="notice"><%= notice %></p>
+      <%= yield %>
+    </div>
   </body>
 </html>
