--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,17 @@
-<p id="notice"><%= notice %></p>
+  <br>
+  <h1>Users</h1>
+  <% @users.each do |user| %>
+    <div class="card" style="width: 30rem;">
+      <div class="card-body">
+        <h4 class="card-title"><%= user.full_name %></h4>
+        <p class="text-muted"><%= user.username %></p>
 
-<h1>Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Password</th>
-      <th>Full name</th>
-      <th>Description</th>
-      <th>Genres</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.password %></td>
-        <td><%= user.full_name %></td>
-        <td><%= user.description %></td>
-        <td><%= user.genres %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+        <%= link_to 'Show Full Profile', user %>
+        <% if false %>
+          <%= link_to 'Edit', edit_user_path(user) %>
+          <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+  <br>
