--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
       </p>
       <% if @user.id == current_user.id %>
         <%= link_to 'Edit Profile', edit_user_path(@user) %>
+        <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
       <% end %>
       <br><br>
 
